--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -15,7 +15,7 @@ body {
   padding-bottom: 10px;
 }
 .phones{
-  width: 50%;
+  width: 40%;
   float: left;
 }
 
@@ -23,13 +23,16 @@ body {
   width: 80%;
 }
 .main-text-section{
-  width: 50%;
+  width: 60%;
   float: right;
+}
+.top-line{
+  position: relative;
 }
 
 .logo{
   display: inline-block;
-  width: 50%;
+  width: 60%;
 }
 
 .logo img{
@@ -37,23 +40,33 @@ body {
 }
 
 .home-button {
+  float: right;
   display: inline-block;
   background-color: #06365f;
-  padding: 2%;
-  width: 30%;
+  margin-left: 10%;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  margin-bottom: 4%;
   border-radius: 3px;
   height: 30px;
+  background: linear-gradient(
+      to bottom,
+      rgb(113, 155, 204) 0%,
+      rgba(58, 104, 144, 1) 100%
+    );
 }
-.home-button img,p{
-  display: inline-block;
-  vertical-align: middle;
+.home-button img{
+  padding-top: 10%;
 }
 
-.home{
-  display: inline-block;
-  vertical-align: middle;
-  width: 30%;
+.home-button span{
+  font-size: 0.95em;
+  color: white;
+  font-weight: bold;
 }
+
 
 .home-text{
   display: inline-block;
@@ -73,18 +86,20 @@ ul{
 
 .main-text{
   background-image: url("../images/frame.png");
-  background-size: cover;
-  font-size: 90%;
-  padding: 5%; 
+  background-size: 100% 100%;
+ 
 
 }
-.main-buttons{
-  padding: 5%;
+.main-text-container{
+  padding: 6%;
+  font-size: 80%;
+
 }
 
 .main-text h1{
   font: 80% 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #06365f;
+  margin: 0;
 }
 
 ul li{
