--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,80 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.bluebar {
+  background-image: url('../images/bgtile.png');
+  background-repeat:repeat-x;
+  height: 280px;
+}
+
+.flexcontainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  padding: 10% 15%;
+}
+
+.phone {
+  align-self: auto;
+  flex-grow: 1;
+  margin-right: 5%;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+button {
+  width: 120px;
+  border-radius: 2px;
+  border: 1px solid #336284;
+  box-shadow: 0px 0px 4px var(--dark-blue);
+  background: linear-gradient(to bottom, #7890ac 0%, #38668e 100%);
+  padding: 5px 10px;
+  color: #dce2e9;
+  line-height: 35px;
+  font-weight: bold;
+  font-size: 16px;
+  vertical-align: middle;
+}
+
+
+button a {
+  text-decoration: none;
+  color: #DEE6EC;
+}
+
+.whitebox {
+  background-image: url('../images/frame.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 10px 40px 10px 40px;
+}
+
+.whitebox h1 {
+  color: #06365f;
+}
+
+footer {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 13px;
+}
+
+footer li {
+  display: inline-block;
+  padding-left: 20px;
+}
+
+footer a {
+  color: #06365f;
+  text-decoration: none;
+  font-weight: bold;
+}
