--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -16,11 +16,11 @@ body {
 }
 
 .flexcontainer {
+  align-content: center;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
-  align-content: center;
   padding: 10% 15%;
 }
 
@@ -31,37 +31,36 @@ body {
 }
 
 nav {
+  align-items: center;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  align-items: center;
   justify-content: space-between;
 }
 
 button {
-  width: 120px;
-  border-radius: 2px;
-  border: 1px solid #336284;
-  box-shadow: 0px 0px 4px var(--dark-blue);
   background: linear-gradient(to bottom, #7890ac 0%, #38668e 100%);
-  padding: 5px 10px;
+  border: 1px solid #336284;
+  border-radius: 2px;
+  box-shadow: 0px 0px 4px var(--dark-blue);
   color: #dce2e9;
-  line-height: 35px;
-  font-weight: bold;
   font-size: 16px;
+  font-weight: bold;
+  line-height: 35px;
+  padding: 5px 10px;
   vertical-align: middle;
+  width: 120px;
 }
 
-
 button a {
-  text-decoration: none;
   color: #DEE6EC;
+  text-decoration: none;
 }
 
 .whitebox {
   background-image: url('../images/frame.png');
-  background-size: contain;
   background-repeat: no-repeat;
+  background-size: contain;
   padding: 10px 40px 10px 40px;
 }
 
@@ -71,17 +70,21 @@ button a {
 
 footer {
   text-align: center;
-  text-transform: uppercase;
   font-size: 13px;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 footer li {
   display: inline-block;
-  padding-left: 20px;
+  padding-left: 10px;
 }
 
 footer a {
   color: #06365f;
   text-decoration: none;
-  font-weight: bold;
+}
+
+footer p {
+  color: grey;
 }
