--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,71 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blue-box{
+  background-color: #1c5380;
+  width: 100%;
+  height: 300px;
+}
+
+.row{
+  margin:100px;
+  position: absolute;
+  top: 80px;
+  right: 0;
+}
+
+.right{
+  float: right;
+  width: 50%;
+  margin: 0;
+  display: inline-block;
+}
+
+.left{
+  float: left;
+  width: 50%;
+  margin: 0;
+}
+
+.box{
+  border-radius: 5px;
+  box-shadow: -5px -5px 10px black;
+  padding: 10px;
+  text-align: center;
+}
+
+.btn{
+  background-color: #06365f;
+  color: white;
+  float: right;
+  position: absolute;
+  top: 20px;
+  right: 150px;
+  border-radius: 2px;
+  width: 120px;
+  height: 50px;
+}
+
+ul{
+  list-style:none;
+  display: inline-flex;
+  
+}
+li{
+  margin-left: 10px;
+  color:#06365f;
+  font-weight: 600;
+}
+
+.box{
+  margin:50px;
+}
+
+.footer{
+  position: absolute;
+  top: 50%;
+  width: 900px;
+  height: 200px;
+  margin:250px; 
+}
