--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,42 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+ font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat:repeat-x;
+  justify-content: center;
+
 }
+footer{
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.container1{
+  padding-left: 50px;
+  margin-top: 50px;
+  display:flex;
+  flex-direction: row;
+}
+.container2{
+
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  justify-content:flex-end;
+  padding-left: 250px
+
+
+}
+
+#bottomBar {
+	padding: 0; margin: 0;
+}
+#bottomBar li {
+
+  diplay: inline;
+  display:flex;
+  display: inline-block;
+   padding: 10px;
+   float: right;
+	list-style: none;}
