--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -2,9 +2,123 @@
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
+#497195
 */
+* {
 
+  padding: 0;
+  margin: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+h1 {
+
+  color: #06365f;
+}
+.main {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  width: 100%;
+  height: 800px;
+
+}
+.container {
+
+
+  position: relative;
+  float: left;
+  top: 130px;
+  width: 80%;
+  height: auto;
+  left: 10%;
+
+}
+.float-left {
+
+  float: left;
+}
+.login {
+
+  float: right;
+}
+.clear-fix{
+
+  clear: both;
+}
+.left {
+
+  width: 39%;
+  height: auto;
+
+
+}
+.top-links {
+
+  width: 100%;
+  height:78px;
+
+}
+.top-links p{
+
+display: inline;
+width: auto;
+height: 40px;
+background: #4a7ba0;
+border: 1px solid #1c4769;
+padding: 8px 9px 1px 9px;
+border-radius: 8px;
+margin:10px 20px 0 0;
+position: relative;
+
+
+}
+.top-links a {
+
+  text-decoration: none;
+  color: white;
+}
+.right {
+
+    width: 49%;
+    height: 500px;
+
+
+}
+.badge-iphone {
+
+  padding-right: 20px;
+}
+.bottom-nav {
+
+  clear: both;
+}
+.bottom-nav ul {
+
+  text-align: center;
+  padding: 50px 0;
+}
+.bottom-nav li{
+
+  list-style-type: none;
+  display: inline;
+  color: #4a7ba0;
+}
+.bottom-nav a {
+  padding: 0 8px;
+
+  font-family:'Oswald', sans-serif;
+  text-transform: uppercase;
+  color: #4a7ba0;
+  text-decoration: none;
+}
+.right-body {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 30px 50px;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+
 }
