--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,84 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 100px;
+  justify-content: space-around;
+}
+
+.description {
+  width: 500px;
+}
+
+ul.noStyle {
+  list-style-type: none;
+  color: blue;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+ul li {
+  display: inline;
+  padding: 10px;
+}
+
+.navBar {
+  list-style-type: none;
+}
+
+.branding {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.bottomPart {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  color: white;
+}
+
+h2 {
+  color: #0b0c30;
+  margin: 0;
+}
+
+.whiteBox {
+  background: url("../images/frame.png");
+  padding: 5%;
+  box-sizing: border-box;
+  background-repeat: no-repeat;
+}
+
+.logIn {
+  width: 80px;
+  height: 40px;
+  background-color: #2646a5;  background: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgba(0,0,255,0.5);
+  font-size: 0.8em;
+  color: white;
+}
+
+footer {
+  margin-left: 20px;
 }
