--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,126 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.background-blue{
+  background-color: #1c5380;
+  height: 300px;
+
+}
+
+h1 {
+  color: white;
+}
+
+h2 {
+  color: #06365f;
+}
+
+.absolute {
+  position: absolute;
+}
+.absolute-central-box{
+  top: 100px;
+  left: 300px;
+  margin: 0 auto;
+  width: 900px;
+}
+
+.box-img-phone{
+  /*background: #00D1AE;*/
+  float: left;
+  height: 550px;
+  padding-top: 10px;
+  width: 40%;
+
+}
+
+.img-phone{
+
+}
+
+.box-container-info{
+  /*background: #00FF00;*/
+  float: left;
+  height: 550px;
+  padding-top: 10px;
+  margin: 0 1%;
+  width: 50%;
+}
+
+.info-box{
+   font-size: 1.7em;
+   text-align: center;
+   border: 2px solid #eee;
+   border-radius: 20px;
+   box-sizing: border-box;
+   box-shadow: 2px 2px 10px 0 #eee;
+   margin: 50px 5% 0 5%;
+   padding: 20px;
+   width: 40%
+
+}
+
+
+
+.info-instagram{
+
+  border: 1px solid #fff;
+  border-radius: 20px;
+  box-sizing: border-box;
+  box-shadow: 2px 2px 10px 0 #eee;
+}
+
+.relative{
+  position: relative;
+}
+
+.box-info-instagram{
+  position: absolute;
+  margin: 5px;
+  
+}
+
+.button{
+
+}
+
+.clearfix {
+  clear: both;
+}
+
+.footer-bar{
+
+  text-align: center;
+  padding: 0 100px;
+  margin: 0 0 25px 0;
+
+}
+
+.footer-bar-ul{
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.footer-bar-li{
+  list-style-type: none;
+  text-align: center;
+
+}
+
+.footer-bar-item-link{
+  color: blue;
+  text-decoration: none;
+  float: left;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  width: 6%;
+}
+
+.footer-bar-item{
+  color: grey;
+  text-decoration: none;
+  float: left;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  width: 10%;
+}
