--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,46 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  background-color: rgb(237, 247, 252);
 }
+
+.main-container{
+  width: 1000px;
+  height: 500px;
+  /* background-color: RED; */
+  margin: 120px auto;
+}
+
+.iphones{
+  /* background-color: blueviolet; */
+  float: left;
+  margin-right: 100px;
+  
+}
+
+.main-right{
+  float: right;
+  /* background-color: blue; */
+  width: 500px;
+  height: 500px;
+  margin-right: 60px;
+}
+
+.text-box{
+  background: url(../images/frame.png);
+  background-repeat: no-repeat;
+  margin: 0 auto;
+  height: 600px;
+  padding-right: 40px;
+  padding-left: 40px;
+  padding-top: 20px;
+  
+}
+
+//* TEMP *//
+body, div, h1, h2, p, .main-container  {
+  border: solid 1px black;
+}
+
