--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,92 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.background{
+  background-image: url("../images/bgtile.png");
+  height: 270px;
+  position: relative;
+  /* padding: 7% 20%; */
+}
+.container{
+  display: flex;
+  padding: 5% 20% 5% 20%;
+}
+
+.Iphone{
+margin-right: 50px;
+}
+/* .insta-login{
+  display: flex;
+  justify-content: space-between;
+} */
+.description{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 60%;
+}
+.desc-top{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0px 10px;
+}
+.desc-bottom{
+  display: flex;
+  margin-left: 50px;
+}
+.Instagram-logo{
+  /* width: 60px; */
+}
+img.home {
+vertical-align: middle;
+margin-right: 10px;
+}
+.login{
+  color: white;
+  background-image: url("../images/bgtile.png");
+  border: 1px solid #06365f;
+  width: 90px;
+  height: 30px;
+  padding: 5px 5px 5px 5px;
+  text-decoration: none;
+}
+.text{
+  align-self: center;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding: 10px 50px;
+}
+.title{
+  color:#06365f;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+.appstore{
+  margin-right: 20px;
+}
+.googleplay{
+  /* align-self: flex-end; */
+}
+.footer{
+  /* margin-bottom: 1000px; */
+}
+.ul{
+  width: 800px;
+  margin: 0 auto;
+}
+.li{
+  width: 10%;
+  list-style-type: none;
+  text-align: center;
+  float: left;
+  color: #1c5380;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 0.8em;
+}
+.li.last{
+  color: #CCC;
+  width: 18%;
+}
