--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,108 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+html {
+  box-sizing: border-box;
 }
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+
+/* ---- typography ---- */
+
+button p{
+  color: white;
+}
+
+
+/* ---- layout ---- */
+
+body {
+  background: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+.everything {
+  padding-top: 80px;
+  margin: auto;
+  width:90%;
+}
+
+/* ---- components ---- */
+
+button {
+  background-color:#1c5380;
+  float: right;
+  width: 90px;
+  height: 40px;
+  margin-top: 10px;
+  border-radius: 2px;
+  border: 1px solid #06365f ;
+  background-color: #1c5380
+}
+
+.home-logo{
+  float: left;
+  margin-top: 2px;
+}
+
+.text-logo{
+ line-height: 26px; 
+ margin:0;
+ margin-left: 8px;
+}
+
+footer ul {
+  list-style: none;
+  clear: both;
+  margin-left: 140px;
+}
+
+footer li {
+  display: inline;
+  clear: both;
+  margin:auto;
+}
+
+.special {
+  color: #1c5380;
+}
+
+.main {
+  margin: auto;
+  float: right;
+  width: 500px;
+  height: 600px;
+  padding-top: 12px;
+}
+
+.phones {
+  margin: auto;
+  float: left;
+}
+
+.insta-logo {
+  width:55%;
+}
+
+.white-frame {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+}
+
+h1,p {
+  width: 80%;
+  margin-left: 30px;
+  padding-top: 5%;
+}
+
+.apple-logo {
+  padding-top: 600px;
+}
+
+.bottom-logo {
+ margin-top: -555px;
+ margin-left: 30px;
+}
+
