--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,71 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  
+}
+#wrapper{
+  margin: 0 auto;
+  margin-top: 80px;
+  max-width: 874px;
+}
+#cover{
+  margin-bottom: 50px;
+}
+#cover-image{
+  float: left;
+  width: 318px;
+  margin-right: 52px;
+}
+
+#cover-info{
+  float: left;
+  width: 504px;
+}
+#welcome{
+  height: 65px;
+  position: relative;
+  padding-top: 20px;
+  margin-bottom: 17px;
+}
+#logo{
+  height: 65px;
+}
+/*-- Button Log in --*/
+#buton-ini{
+  height: 40px;
+  width: 100px;
+  position: absolute;
+  top: 20px;
+  right: 8px;
+  background: linear-gradient(#6a8fae, #4d779c);
+  border: 1px solid #4d779c;
+  border-radius: 2px;
+}
+#buton-ini a{
+  text-decoration: none;
+  color: #fff;
+}
+#buton-ini p{
+  display: inline-block;
+  line-height: 40px;
+  margin: 0px;
+}
+#buton-ini img{
+  vertical-align: sub;
+  margin: 0 10px;
+}
+
+#message{
+  background: url(../images/frame.png) no-repeat;
+  padding: 40px;
+}
+#message h2{
+  margin: 0;
+  color: #06365f;
+}
+
+#site-footer{
+  clear: both;
 }
