--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,9 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0%;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
 }
+
+
