--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -47,7 +47,32 @@ h1{
 }
 
 .login{
+  box-sizing: border-box;
+  height: 38px;
+  margin-top: 20px;
+  padding: 0 10px;
+  text-align: center;
   float: right;
+  background-repeat: repeat-x;
+  background-size: 100%;
+  border: 0px;
+  border-radius: 3px;
+  background: -moz-linear-gradient(top, #7199b3 1%, #517496 100%); 
+  background: -webkit-linear-gradient(top, #7199b3 1%,#517496 100%);
+  background: linear-gradient(to bottom, #7199b3 1%,#517496 100%); 
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7199b3', endColorstr='#517496',GradientType=0 ); 
+  -webkit-box-shadow: 0px 0px 5px 0px #06365f;
+  -moz-box-shadow: 0px 0px 5px 0px #06365f;
+  box-shadow: 0px 0px 5px 0px #06365f; 
+  font-size: .8em;
+  line-height: 2.2em;
+  color: #fff;
+  font-weight: 400;
+}
+
+.login img{
+  vertical-align: middle;
+  margin-right: 10px;
 }
 
 .ig-info{
