--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,109 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.main {
+  width: 100%;
+  background-color: #fff;
+  position: relative;
+}
+
+.half-top {
+  width: 100%;
+  height: 300px;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+/* .half-bottom {
+  width: 100%;
+  height: 540px;
+  background-color: #fff;
+} */
+.container {
+  width: 935px;
+  /* height: 750px; */
+  padding-top: 100px; 
+  margin: 0 auto;
+}
+.right-half {
+  float: left;
+  padding-left: 50px;
+  padding-right: 10px;
+  width: 314px;
+}
+
+.left-half {
+  float: left;
+  width: 461px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.left-half-top {
+  min-height: 20%;
+  width: 100%;
+  margin-top: 20px;
+}
+.left-half-text {
+  background-image: url(../images/frame.png);
+  background-size: contain;
+  margin-top: 5px;
+  background-repeat: no-repeat;
+  padding: 10px 40px;
+}
+
+.left-half h2 {
+  font-size: 26px;
+  font-weight: 600;
+  color: #06365f;
+  width: 70%;
+}
+
+.left-half p {
+  font-size: 14px;
+}
+.shops img {
+  margin-top: 10px;
+  margin-right: 10px;
+}
+.footer {
+  clear: both;
+  width: 935px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin: 0 auto;
+  text-align: center;
+}
+ul.footer-menu {
+  display: inline-block;
+  margin: 0 20px 0 0;
+  list-style-type: none;
+}
+ul.footer-menu li {
+  display: inline-block;
+  margin: 0 10px;
+  font-size: 12px;
+  font-weight: 700;
+  color: #1c5380;
+  text-transform: uppercase;
+}
+
+ul.footer-menu li:last-child {
+  color: #999;
+}
+.logo a.button {
+  font-weight: 400;
+  background-color: rgba(255, 255, 255, 0.2);
+  background-image: url(../images/home.png);
+  background-repeat: no-repeat;
+  background-position: 5px;
+  border: 1px outset #1c5380;
+  border-radius: 4px;
+  padding: 10px 10px 8px 40px;
+  font-size: 16px;
+  color: #fff;
+  text-decoration: none;
+  clear: left;
+  float: right;
+  margin: 15px 10px 0 0;
+}
