--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,106 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  background-color: white;
+  width: 1000px;
 }
+
+.main-image {
+  float: left;
+  padding-top: 100px;
+  padding-left: 100px;
+}
+
+.phones {
+  margin: 200px, 200px, 0px, 0px;
+}
+
+.main-logo {
+  float: left;
+  padding-top: 120px;
+  padding-left: 50px;
+}
+
+.main-button {
+  float: right;
+  margin-top: 100px;
+  padding-right: 35px;
+}
+
+#log {
+  margin: 30px 20px;
+  background-image: url('../images/home.png');
+  background-repeat: no-repeat;
+  background-origin:content-box;
+  background-position: left;
+  background-color:#1c5380;
+  background-size: 25px;
+  border: solid 0.5px #06365f;
+  border-radius: 3px;
+  width: 110px;
+  height: 50px;
+  color: white;
+  font-size: 14px;
+}
+
+.content {
+  float: right;
+  width:500px;
+  padding-right: 50px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-blend-mode: overlay;
+}
+
+.content h2 {
+  padding-top: 40px;
+  padding-bottom: 20px;
+  margin-right: 45px;
+  margin-left: 45px;
+  color:#06365f;
+}
+
+.content p {
+  margin-top: 20px;
+  margin-right: 45px;
+  margin-left: 45px;
+}
+
+#download-ap {
+  margin-top: 20px;
+  margin-left: 45px;
+}
+#download-an {
+  margin-top: 20px;
+  margin-left: 35px;
+}
+
+#bottom-nav {
+  clear: both;
+  font-variant-caps: all-small-caps;
+  padding-top: 40px;
+  padding-left: 200px;
+}
+
+#bottom-nav ul {
+	list-style: none;
+	overflow: hidden;
+}
+
+#bottom-nav li {
+	float: left;
+	padding-right: 10px;
+	line-height: 30px;
+  margin-right: 10px;
+}
+
+#bottom-nav a {
+  text-decoration: none;
+  color: #1c5380;
+}
+
+
+
+
