--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -34,15 +34,27 @@ body {
 /* --------- typography ---------- */
 
 .paragraph-style {
-  text-align: right;
-  text-justify: auto
+  float: right;
+  text-align: left;
+  margin-top: -225px;
+  margin-right: 150px;
+ font-size: smaller;
 }
 
 h1{
   float: left;
   margin-left: 30px;
-  margin-top: -265px;
+  margin-top: -325px;
   color: #06365f;
+}
+
+ul{
+  margin-top: 600px;
+}
+
+li {
+	line-height: 30px;
+  font-size: 10px
 }
 
 /* --------- layout ---------- */
@@ -94,19 +106,20 @@ h1{
 
 .frame{
   float: left;
+  margin-bottom: 50px
 
 }
 
 .apple{
   float: right;
-  margin-right: 80px
-
+  margin-right: 30px;
+  margin-top: -20px;
 }
 
 .google{
  float: right;
- margin-right: 60px
-
+ margin-right: 150px;
+ margin-top: -20px;
 }
 
 
@@ -126,9 +139,18 @@ h1{
   list-style: none;
   text-transform: uppercase;
   float: left;
+  padding-right: 20px;
 }
 
+li:first-child{
+  margin-left: 150px;
+}
 
+#site-footer{
+  font-size: small;
+  margin-top: 3px;
+  color: darkgrey;
+}
 /* --------- pages ---------- */
 
 
@@ -141,6 +163,6 @@ h1{
 
 div, header, footer, nav, article {
 
-	border: 1px solid black;
+	border: 1px solid transparent;
 
 } 
