--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,132 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/* ---- reset ---- */
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+/* --- typography --- */
+
+.abt h2{
+  width: 60%;
+  margin-left: 5%;
+  margin-top: 2%;
+  font-size: 30px;
+  color: #06365f;
+  position: relative;
+  top: 15px;
+}
+
+.abt p{
+  width: 70%;
+  margin-left: 5%;
+  font-size: 14px;
+}
+
+footer h3{
+  font-size: 12px;
+  float: right;
+  position: relative;
+  right: 380px;
+  bottom: 10px;
+  color: grey;
+}
+
+/* --- layout --- */
+.container{
+  margin-left: 15%;
+  width: 70%;
+}
+.main{
+  background: url('../images/bgtile.png');
+  background-repeat: no-repeat;
+  background-size: 100% 50%;
+  overflow: auto;
+  width: 100%;
+  padding: 10% 10% 0 10%;
+  margin-bottom: 4%;
+}
+
+/* --- components --- */
+
+.phone-image{
+  float:left;
+  position:relative;
+  left: 80px;
+}
+
+.right-cnt{
+  width: 50%;
+  float: right;
+  position: relative;
+  right: 80px;
+}
+
+.logo{
+  overflow: auto;
+  margin-bottom: 4%;
+}
+
+.lg-ig{
+  float:left;
+}
+
+.abt{
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  clear: both;
+  width: 100%;
+  margin-bottom: 4%;
+}
+.app img{
+  float: left;
+  padding-left: 5%;
+}
+
+.button{
+  background-image: url('../images/home.png');
+  background-position: 10%;
+  background-repeat: no-repeat;
+  background-color: #1c5380;
+  border-radius: 2px;
+  font-size: 14px;
+  font-weight: 600;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+  border: 1px solid #06365f;
+  float: right;
+  width: 95px;
+  height: 40px;
+  cursor: pointer;
+  position: relative;
+  text-align: right;
+  top: 20px;
+}
+
+ul li{
+  list-style-type: none;
+  display: inline-block;
+  padding: 0 8px 0 8px;
+  float: left;
+  position: relative;
+  left: 300px;
+  font-size: 12px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  color: #1c5380;
+  text-transform: uppercase;
+}
+footer{
+  overflow: auto;
 }
