--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,104 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat:repeat-x;
 }
+
+.center-box{
+   background-color: green;
+   width: 80%;
+   height: 40%px;
+   margin-right: auto;
+   margin-left: auto;
+   margin-top: 8%;
+   position: relative;
+
+}
+
+
+
+.phones{
+  float: left;
+}
+
+.leftBox{
+  width: 50%;
+  float: right;
+  background-color: blueviolet;
+  
+ 
+}
+
+.leftBox-Top{
+ 
+}
+
+.logo{
+  float: right;
+}
+
+.button{
+  float: left;
+  background-color: #1c5380;
+  border: 1px solid #06365f;
+  border-radius: 3px;
+}
+
+.frame{
+ 
+}
+
+.text{
+ 
+
+}
+#site-nav{
+  clear: both;
+  background-color: red;
+  margin: 0 auto;
+}
+
+#site-nav ul{
+  list-style: none;
+  
+  
+}
+#site-nav li{
+  font-size: 10px;
+  text-transform: uppercase;
+  color: #1c5380;
+  float: left;
+	padding-right: 10px;
+	line-height: 30px;
+	border-right: 1px solid white;
+  margin-right: 20px;
+  
+}
+
+/*.logo{
+  
+}
+
+.button {
+  background-color: #1c5380;
+  height: 32px;
+  width: 78px;
+  border: 1px solid #06365f;
+  border-radius: 2px;
+  
+  
+ }
+
+ .home{
+   float:left;
+   margin: 5px;
+   width: 17px;
+   height: 17px;
+ }
+
+ .button-text{
+   float: left;
+ }
+
+ 
