--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 .center-box{
-   background-color: green;
+  
    width: 80%;
    height: 40%px;
    margin-right: auto;
@@ -31,7 +31,7 @@ body {
 .leftBox{
   width: 50%;
   float: right;
-  background-color: blueviolet;
+  /*background-color: blueviolet;*/
   
  
 }
@@ -61,7 +61,6 @@ body {
 }
 #site-nav{
   clear: both;
-  background-color: red;
   margin: 0 auto;
 }
 
