--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,88 @@
 /*
 Colors to use:
 dark blue: #06365f
-light blue: #1c5380
+light blue: #1c5380 
 */
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.image-header {
+  background-image: url('../images/bgtile.png');
+  height: 350px;
+  background-repeat: repeat;
+}
+
+section {
+  width: 100%;
+  position: fixed;
+  top: 110px;
+}
+
+.container {
+  height: 800px; 
+  width: 800px;
+  margin: auto;
+}
+
+
+.movil-photo{
+  box-sizing: border-box;
+  float: left;
+  width: 40%;
+  text-align: left;
+}
+
+.information {
+box-sizing: border-box;
+float: left;
+width: 55%;
+
+}
+
+.logo-insta {
+  padding-left: 15px;
+}
+
+.logo-home {
+  float: right;
+  margin-top: 25px;
+  background-color: #1c5380;
+  border: 1px solid #06365f;
+  line-height: 20px;
+}
+
+.text-information {
+  background-image: url('../images/frame.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 40px;
+  margin: 10px;
+}
+
+h1 {
+  color: #06365f;
+}
+
+footer {
+  position: fixed;
+  bottom: 0px;
+  text-align: center;
+  width: 100%;
+  margin: 20px;
+}
+
+.link-footer {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #1c5380;
+  margin: 0 8px;
+  font-weight: bold;
+}
+
+.copy {
+  color: grey;
+  text-transform: uppercase;
 }
